fix: re-apply persistent CORS fixes and fix Docker profile override